# bs_cloud

./: .gitignore  CMakeLists.txt  README.md  cbuild.sh
cloud-fit/: .gitignore  cbuild.sh
cloud-sample/include/sample_filter/: farthest_point_sample.h
cloud-segment/: .gitignore
cloud-segment/src/: patchworkpp.cpp  ring_ground_filter.cpp
cloud-segment/test/: euclidean_cluster_test.cpp  line_fit_ground_segmentation_test.cpp  ring_ground_filter_test.cpp
cmake/: bcloudConfig.cmake  global_definition.cmake  install_files.cmake
fit/: CMakeLists.txt
fit/circle/: circle.cpp  circle.h
fit/common/: interface.h
fit/cylinder/: cylinder.h  cylinder_with_radius.cpp  cylinder_with_radius.h
fit/line/: line.h
fit/plane/: plane.cpp  plane.h
fit/test/: cylinder_test.cpp  plane_test.cpp
modules/common/: global_definition.h
modules/fit/circle/: circle.h
modules/fit/common/: interface.h
modules/fit/cylinder/: cylinder.cpp  cylinder.h
modules/fit/line/: line.cpp  line.h
modules/fit/surface/: quadratic_surface.cpp  quadratic_surface.h
modules/fit/test/: circle_test.cpp  cylinder_test.cpp  line_test.cpp  plane_test.cpp  surface_test.cpp
modules/sample/docs/: filtered_point_cloud1.pcd
modules/sample/far_outliers_removal/: far_outliers_removal.cpp
modules/sample/grid_sample/: grid_sample.cpp
modules/sample/mirror_reflection_removal/: mirror_reflection_removal.cpp  mirror_reflection_removal.h
modules/sample/normal_space_sample/: normal_space_sample.h
modules/sample/statistical_outlier_removal/: statistical_outlier_removal.cpp  statistical_outlier_removal.h
modules/sample/test/: mirror_reflection_removal_test.cpp  poisson_disk_sample_test.cpp
modules/segment/: CMakeLists.txt
modules/segment/common/: point_type.h
modules/segment/dbscan_cluster/: dbscan_cluster.cpp  dbscan_cluster.h
modules/segment/euclidean_cluster/: euclidean_cluster.cpp  euclidean_cluster.h
modules/segment/kmeans_cluster/: kmeans_cluster.cpp  kmeans_cluster.h
modules/segment/ray_ground_filter/: ray_ground_filter.h
sample/: CMakeLists.txt  README.md  cbuild.sh
sample/common/: interface.h
sample/docs/: filtered_point_cloud.pcd
sample/far_outliers_removal/: far_outliers_removal.cpp  far_outliers_removal.h
sample/farthest_point_sample/: farthest_point_sample.cpp  farthest_point_sample.h
sample/grid_sample/: grid_sample.cpp  grid_sample.h
sample/kmeans_sample/: kmeans_sample.h
sample/mirror_reflection_removal/: mirror_reflection_removal.h
sample/normal_space_sample/: normal_space_sample.h
sample/poisson_disk_sample/: poisson_disk_sample.cpp  poisson_disk_sample.h
sample/radius_outlier_removal/: radius_outlier_removal.cpp  radius_outlier_removal.h
sample/src/: farthest_point_filter.cpp
sample/statistical_outlier_removal/: statistical_outlier_removal.cpp  statistical_outlier_removal.h
sample/test/: far_outliers_removal_test.cpp  farthest_point_filter_test.cpp  farthest_point_sample_test.cpp  grid_sample_test.cpp  kmeans_sample_test.cpp  normal_space_sample_test.cpp  radius_outlier_removal_test.cpp  statistical_outlier_removal_test.cpp
segment/: CMakeLists.txt  cbuild.sh
segment/cmake/: install_files.cmake
segment/cylinder/: cylinder.cpp  cylinder.h
segment/euclidean_cluster/: euclidean_cluster.cpp
segment/line_fit_ground_segmentation/: line_fit_ground_segmentation.cpp
segment/patchworkpp/: patchworkpp.cpp
segment/ray_ground_filter/: ray_ground_filter.cpp
segment/ring_ground_filter/: ring_ground_filter.cpp  ring_ground_filter.h
segment/src/: cylinder.cpp  euclidean_cluster.cpp  line_fit_ground_segmentation.cpp  ray_ground_filter.cpp
segment/test/: cylinder_test.cpp  euclidean_cluster_test.cpp  line_fit_ground_segmentation_test.cpp  patchworkpp_test.cpp  ray_ground_filter_test.cpp  ring_ground_filter_test.cpp
(+12 files in other folders)
